tests/ui/fail/fn-mismatch-unsafe-02.stderr
error: encountered mismatch in unsafety for #[union_fn] method
 --> tests/ui/fail/fn-mismatch-unsafe-02.rs:6:5
  |
6 |     fn bar() {}
  |     ^^

error: mismatch with this method
 --> tests/ui/fail/fn-mismatch-unsafe-02.rs:5:5
  |
5 |     unsafe fn foo() {}
  |     ^^^^^^
